--- a/my_reactapp_musicplayer/src/index.css
+++ b/my_reactapp_musicplayer/src/index.css
@@ -46,7 +46,7 @@ body.dark {
   transform: scale(1.2);
 }
 li:hover{
-  color: #32cd32;
+  color: #cd3232;
 }
 .theme-toggle-btn {
   font-size: 1rem; /* Match the font size of navbar links */
