--- a/my_reactapp_musicplayer/src/index.css
+++ b/my_reactapp_musicplayer/src/index.css
@@ -1,3 +1,6 @@
+
+
+
 /* Global Light and Dark Themes */
 body.light {
   background-color: #f9f9f9;
@@ -46,7 +49,7 @@ body.dark {
   transform: scale(1.2);
 }
 li:hover{
-  color: #cd3232;
+  color: #32cd32;
 }
 .theme-toggle-btn {
   font-size: 1rem; /* Match the font size of navbar links */
@@ -67,3 +70,39 @@ li:hover{
 h1{
   cursor: pointer;
 }
+.navbar-links li {
+  position: relative;
+  padding-bottom: 5px;
+  transition: color 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.navbar-links li:hover {
+  color: #32cd32; /* Change text color on hover */
+}
+
+.navbar-links li::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #32cd32; /* Green underline */
+  transform: scaleX(0); /* Initially hidden */
+  transition: transform 0.3s ease-in-out;
+}
+
+.navbar-links li:hover::after {
+  transform: scaleX(1); /* Expand on hover */
+}
+.brand-name {
+  color: #32cd32; /* Green color */
+  font-size: 1.8rem; /* Default size */
+  transition: transform 0.3s ease-in-out;
+}
+
+.brand-name:hover {
+  transform: scale(1.2); /* Increases size by 20% */
+}
+
